# Haskell-Labs

Lab-2/: BlackJack.hs
Lab-3/: 20b75234-0234-4c9a-a61c-ef7183726222.hs  Sudoku.hs
Lab-4/: Calculator.hs  Expr.hs  Expression.hs  myfirstapp.cabal
Lab-4/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Lab-4/src/: Calculator.hs  Expr.hs  ExprOld.hs
Lab-4/src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
