cabal-version:      2.4
name:               myfirstapp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             zozmoh
maintainer:         zozk@live.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable myfirstapp
    main-is:          Calculator.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      QuickCheck > 2.14,
                      threepenny-gui,
                      aeson
    hs-source-dirs:   src
    default-language: Haskell2010
